--- a/res/layout/activity_lectures.xml
+++ b/res/layout/activity_lectures.xml
@@ -5,16 +5,15 @@
     android:background="@color/gray_background"
     tools:context="${relativePackage}.${activityClass}" >
 
-    
     <RelativeLayout
         android:id="@+id/rl_no_lectures_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:paddingTop="60dp"
         android:paddingBottom="68dp"
         android:paddingLeft="30dp"
-        android:paddingRight="30dp" >
+        android:paddingRight="30dp"
+        android:paddingTop="60dp" >
 
         <ImageView
             android:id="@+id/img_paper_plane"
@@ -31,25 +30,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/img_paper_plane"
-            android:textStyle="bold"
             android:text="@string/no_active_lectures"
             android:textColor="@color/dark_gray_text"
-            android:textSize="20sp" />
-
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </RelativeLayout>
-    
+
     <Button
         android:id="@+id/btn_create_lecture"
         style="@style/btnStyleGreen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="@string/create_lecture_button"
-        android:layout_margin="30dp" />
-    
+        android:layout_margin="30dp"
+        android:text="@string/create_lecture_button" />
+
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:background="@color/gray_background"
+        android:divider="@null"
+        android:dividerHeight="0dp" />
+
     <eu.signme.app.ui.ActionBar
         android:id="@+id/action_bar"
         android:layout_width="match_parent"
-        android:layout_height="242dp"/>
+        android:layout_height="242dp" />
 
 </RelativeLayout>
