--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,9 +2,11 @@
 <resources>
 
     <color name="gray_background">#ecf0f1</color>
+    <color name="light_gray_background">#f0f5f6</color>
     <color name="signme_green">#2ecc71</color>
     <color name="signme_red">#e74c3c</color>
     <color name="signme_dark_red">#c0392b</color>
+    <color name="signme_yellow">#f1c40f</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
     <color name="dark_gray_text">#a6a9ab</color>
