badass madafaka create lecture dialog almost done

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -41,6 +41,18 @@
        <item name="android:minWidth">0dp</item>
    </style>
    
+    <!-- White Button Style -->
+    <style name="btnStyleWhite" parent="@android:style/Widget.Button">
+       <item name="android:textSize">22sp</item>
+       <item name="android:textStyle">bold</item>
+       <item name="android:textColor">@drawable/btn_white_text_color</item>
+       <item name="android:gravity">center</item>
+       <item name="android:background">@drawable/btn_white_background</item>
+       <item name="android:padding">8dp</item>
+       <item name="android:minHeight">0dp</item>
+       <item name="android:minWidth">0dp</item>
+   </style>
+   
     <!-- Text Link Style -->
     <style name="btnStyleTextLink" parent="@android:style/Widget.Button">
        <item name="android:textSize">14sp</item>
@@ -61,6 +73,16 @@
        <item name="android:paddingRight">4dp</item>
        <item name="android:paddingTop">8dp</item>
        <item name="android:paddingBottom">8dp</item>
+       <item name="android:minHeight">0dp</item>
+       <item name="android:minWidth">0dp</item>
+   </style>
+   
+    <!-- Hour Picker Button Style -->
+    <style name="btnStyleHourPicker" parent="@android:style/Widget.Button">
+       <item name="android:textSize">24sp</item>
+       <item name="android:textColor">@drawable/btn_menu_text_color</item>
+       <item name="android:gravity">center</item>
+       <item name="android:background">@drawable/btn_menu_background</item>
        <item name="android:minHeight">0dp</item>
        <item name="android:minWidth">0dp</item>
    </style>
