--- a/res/drawable/btn_white_background.xml
+++ b/res/drawable/btn_white_background.xml
@@ -2,15 +2,24 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_pressed="true"><shape android:shape="rectangle">
-            <solid android:color="@color/white" />
-        </shape></item>
-    <item android:state_selected="true"><shape android:shape="rectangle">
+            <corners android:radius="1dp" />
+
+            <stroke android:width="2dp" android:color="@color/white" />
+
             <solid android:color="@color/white" />
         </shape></item>
     <item android:state_focused="true"><shape android:shape="rectangle">
+            <corners android:radius="1dp" />
+
+            <stroke android:width="2dp" android:color="@color/white" />
+
             <solid android:color="@color/signme_green" />
         </shape></item>
     <item><shape android:shape="rectangle">
+            <corners android:radius="1dp" />
+
+            <stroke android:width="2dp" android:color="@color/white" />
+
             <solid android:color="@color/signme_green" />
         </shape></item>
 
